// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marqueeSpeed renders 0 1`] = `
Array [
  .c0 {
  marquee-speed: 0;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: 0;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: 0;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeSpeed renders function 1`] = `
Array [
  .c0 {
  marquee-speed: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: has;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: has;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeSpeed renders invalid theme path 1`] = `
Array [
  .c0 {
  marquee-speed: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeSpeed renders negative number 1`] = `
Array [
  .c0 {
  marquee-speed: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeSpeed renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  marquee-speed: July;
}

@media screen and (min-width:November) {
  .c0 {
    marquee-speed: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-speed: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-speed: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-speed: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: July;
}

@media screen and (min-width:November) {
  .c0 {
    marquee-speed: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-speed: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-speed: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-speed: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    marquee-speed: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-speed: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-speed: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-speed: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    marquee-speed: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-speed: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-speed: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-speed: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeSpeed renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    marquee-speed: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-speed: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-speed: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-speed: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    marquee-speed: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-speed: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-speed: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-speed: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    marquee-speed: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-speed: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-speed: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-speed: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    marquee-speed: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-speed: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-speed: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-speed: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeSpeed renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  marquee-speed: July;
}

@media May {
  .c0 {
    marquee-speed: August;
  }
}

@media April {
  .c0 {
    marquee-speed: September;
  }
}

@media January {
  .c0 {
    marquee-speed: November;
  }
}

@media April {
  .c0 {
    marquee-speed: August;
  }
}

@media June {
  .c0 {
    marquee-speed: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: July;
}

@media May {
  .c0 {
    marquee-speed: August;
  }
}

@media April {
  .c0 {
    marquee-speed: September;
  }
}

@media January {
  .c0 {
    marquee-speed: November;
  }
}

@media April {
  .c0 {
    marquee-speed: August;
  }
}

@media June {
  .c0 {
    marquee-speed: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    marquee-speed: November;
  }
}

@media April {
  .c0 {
    marquee-speed: January;
  }
}

@media January {
  .c0 {
    marquee-speed: December;
  }
}

@media April {
  .c0 {
    marquee-speed: April;
  }
}

@media June {
  .c0 {
    marquee-speed: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    marquee-speed: November;
  }
}

@media April {
  .c0 {
    marquee-speed: January;
  }
}

@media January {
  .c0 {
    marquee-speed: December;
  }
}

@media April {
  .c0 {
    marquee-speed: April;
  }
}

@media June {
  .c0 {
    marquee-speed: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeSpeed renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    marquee-speed: July;
  }
}

@media April {
  .c0 {
    marquee-speed: August;
  }
}

@media January {
  .c0 {
    marquee-speed: September;
  }
}

@media April {
  .c0 {
    marquee-speed: November;
  }
}

@media June {
  .c0 {
    marquee-speed: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    marquee-speed: July;
  }
}

@media April {
  .c0 {
    marquee-speed: August;
  }
}

@media January {
  .c0 {
    marquee-speed: September;
  }
}

@media April {
  .c0 {
    marquee-speed: November;
  }
}

@media June {
  .c0 {
    marquee-speed: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    marquee-speed: January;
  }
}

@media April {
  .c0 {
    marquee-speed: December;
  }
}

@media January {
  .c0 {
    marquee-speed: April;
  }
}

@media April {
  .c0 {
    marquee-speed: May;
  }
}

@media June {
  .c0 {
    marquee-speed: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    marquee-speed: January;
  }
}

@media April {
  .c0 {
    marquee-speed: December;
  }
}

@media January {
  .c0 {
    marquee-speed: April;
  }
}

@media April {
  .c0 {
    marquee-speed: May;
  }
}

@media June {
  .c0 {
    marquee-speed: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeSpeed renders postitive number 1`] = `
Array [
  .c0 {
  marquee-speed: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeSpeed renders string 1`] = `
Array [
  .c0 {
  marquee-speed: July;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: July;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: June;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: June;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeSpeed renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`marqueeSpeed renders valid theme path 1`] = `
Array [
  .c0 {
  marquee-speed: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-speed: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
